# sftp-manager

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: default.toml
src/: main.rs  state.rs
src/api/: routes.rs
src/api/handlers/: health.rs  mod.rs  sftp.rs
src/config/: settings.rs
src/models/: mod.rs  sftp.rs
src/responses/: api_response.rs  sftp.rs
src/services/: mod.rs  sftp.rs  sftp_lifecycle.rs  sftp_service.rs
src/sftp/: handler.rs  mod.rs  server.rs  session.rs
src/utils/: logger.rs
