[package]
name = "sftp-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
chrono = "0.4.42"
expect = "0.2.0"
