[package]
name = "sftp-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
chrono = "0.4.42"
config = "0.15.18"
tracing-subscriber = "0.3.20"
rand = "0.10.0-rc.0"
serde_json = "1.0.145"
russh-sftp = "2.1.1"
russh = "0.54.6"
